--- a/project_eco_find/Base.lproj/Main.storyboard
+++ b/project_eco_find/Base.lproj/Main.storyboard
@@ -519,10 +519,19 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_icon(1024_1024)" translatesAutoresizingMaskIntoConstraints="NO" id="ko7-wL-D4i">
+                                <rect key="frame" x="27.5" y="749" width="359" height="94"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="94" id="0LF-J4-suw"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="ko7-wL-D4i" firstAttribute="centerX" secondItem="Lql-nz-5sa" secondAttribute="centerX" id="LVt-02-vMl"/>
                             <constraint firstItem="Lql-nz-5sa" firstAttribute="centerY" secondItem="uQN-Xb-gSF" secondAttribute="centerY" id="O1j-qf-9pO"/>
+                            <constraint firstItem="RFV-Xh-vWE" firstAttribute="bottom" secondItem="ko7-wL-D4i" secondAttribute="bottom" constant="19" id="T8t-wW-BhO"/>
+                            <constraint firstItem="ko7-wL-D4i" firstAttribute="leading" secondItem="RFV-Xh-vWE" secondAttribute="leading" constant="27.5" id="Z55-dD-ih0"/>
                             <constraint firstItem="Lql-nz-5sa" firstAttribute="centerX" secondItem="uQN-Xb-gSF" secondAttribute="centerX" id="omK-zg-dyS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RFV-Xh-vWE"/>
@@ -539,7 +548,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mmf-Jq-tca" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="e1V-dl-BiT" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2183" y="1588"/>
+            <point key="canvasLocation" x="2182.608695652174" y="1587.7232142857142"/>
         </scene>
         <!--Игры-->
         <scene sceneID="1qC-Jy-izU">
@@ -606,7 +615,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F3O-eG-f0H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4614" y="1665"/>
+            <point key="canvasLocation" x="4307" y="1712"/>
         </scene>
         <!--Question View Controller-->
         <scene sceneID="PZE-yV-0Wi">
